--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="gameContainer">
+      <h1>Snake Game</h1>
       <canvas id="gameBoard" width="500" height="500"></canvas>
       <div id="scoreText">0</div>
       <button id="btnReset">Reset</button>
